--- a/index.html
+++ b/index.html
@@ -28,15 +28,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container-lg px-5">
-      <div id="hour-" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-    </div>
+    <div class="container-lg px-5"></div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
